--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ composer.phar
 /behat.yml
 */yui/build/*/*-coverage.js
 /lib/yuilib/*/build/*/*-coverage.js
-# lib/yuilib/version/module/module-coverage.js
+# lib/yuilib/version/module/module-coverage.js2
 /lib/yuilib/*/*/*-coverage.js
 atlassian-ide-plugin.xml
 /node_modules/
