--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   schedule:
       - cron: '11 11 * * 0'
   push:
-    branches: [ moodle/testdev ]
+    branches: [ moodle/master ]
 
 jobs:
   merge-branch:
@@ -18,9 +18,9 @@ jobs:
       - name: Merge upstream
         run: |
           git status
-          git checkout moodle/testdev
+          git checkout moodle/master
           git config user.name "Tansel T"
           git config user.email "tanselt@gmail.com"
           git pull https://github.com/moodle/moodle.git MOODLE_39_STABLE --no-edit
-          git push origin moodle/testdev
+          git push origin moodle/master
 
